backends/wayland: use presentation time to track presentation of commits

This means we get the correct refresh rate from the host compositor, and we also get
accurate feedback about when and if the frame we pushed was presented.

BUG: 499176
(cherry picked from commit c912767c4872755c3bbf72e04eb1c17c72608120)