src/backends/wayland/wayland_output.h
@@ -27,6 +27,7 @@ class XdgDecoration;
 }
 
 struct wl_buffer;
+struct wp_presentation_feedback;
 
 namespace KWin
 {
@@ -85,6 +86,9 @@ public:
     void present(const std::shared_ptr<OutputFrame> &frame);
     void setPrimaryBuffer(wl_buffer *buffer);
 
+    void frameDiscarded();
+    void framePresented(std::chrono::nanoseconds timestamp, uint32_t refreshRate);
+
 private:
     void handleConfigure(const QSize &size, KWayland::Client::XdgShellSurface::States states, quint32 serial);
     void updateWindowTitle();
@@ -105,6 +109,8 @@ private:
     quint32 m_pendingConfigureSerial = 0;
     QSize m_pendingConfigureSize;
     QTimer m_configureThrottleTimer;
+    wp_presentation_feedback *m_presentationFeedback = nullptr;
+    uint32_t m_refreshRate = 60'000;
 };
 
 } // namespace Wayland
